test/Fail/Issue2101.err
Issue2101.agda:27.31-32: error: [UnequalTerms]
B !=< (Wrap _A_5)
when checking that the expression b has type Wrap _A_5
